src/test/deca/context/invalid/Objet/condition2_selection.des
The field i is declared protected and you try to get it out from  the class or a subclasse

